--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
     <main>
         <div class="intro">Sharukesh A 🚀</div>
-        <div class="tagline">Nothing to read into there. Thanks!</div>
+        <div class="tagline">Hello World!</div>
         <div class="icons-social">
             <a target="_blank" href="mailto:mail@sharukesh.com"><i class="far fa-envelope"></i></a>
             <a target="_blank" href="https://instagram.com/sharuk_27806"><i class="fab fa-instagram"></i></i></a>
